Añadido seguridad (login/register) y añadido rutas para usuarios clientes. Muchos cambios en general, a partir de ahora haré mas commit.

--- a/stack-camisetas/docker-compose.yaml
+++ b/stack-camisetas/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     ports:
-      - ${MYSQL_HOST_PORT}:${MYSQL_HOST_PORT}
+      - ${MYSQL_HOST_PORT}:${MYSQL_CONTAINER_PORT}
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
 
