--- a/stack-camisetas/.env
+++ b/stack-camisetas/.env
@@ -1,7 +1,11 @@
 MYSQL_ROOT_PASSWORD=s83n38DGB8d72
-MYSQL_HOST_PORT=33308
+MYSQL_USERNAME=root
+MYSQL_HOST=localhost
+MYSQL_HOST_PORT=33307
 MYSQL_CONTAINER_PORT=3306
 ADMINER_HOST_PORT=8181
 ADMINER_CONTAINER_PORT=8080
-
-APP_PORT=3000
+MYSQL_DATABASE=camisetas
+APP_PORT=8000
+SERVICE_PORT=3000
+SESSION_SECRET=atupfev9uMN5FtflLDtKhiQAVRhFehe
